# personas-core

./: .gitignore  CHANGELOG.md  MODEL_CARD.md  README.md  knowledge_graph_schema.md  pyproject.toml
hr_kg_gnn_skill_pack/: CHANGELOG.md  FILE_LIST.json  MANIFEST.md  MODEL_CARD.md  README.md  pyproject.toml
hr_kg_gnn_skill_pack/docs/: 00_path_function_map.md  01_algorithm_api.md  02_kg_schema.md  03_model_design.md  04_training_evaluation.md  05_baseline_and_ablation.md  06_innovation_and_advantage.md  07_deployment.md  08_versioning_and_workflow.md  09_document_maintenance.md
hr_kg_gnn_skill_pack/references/: local_manifest.csv  reading_priority.md  references.csv  references.md  search_queries.md  uploaded_source_notes.md
hr_kg_gnn_skill_pack/references/local/: dgl-heterographconv.html  pyg-heteroconv.html  pyg-heterogeneous.html
hr_kg_gnn_skill_pack/skills/hr-kg-gnn/: SKILL.md
hr_kg_gnn_skill_pack/skills/hr-kg-gnn/agents/: openai.yaml
hr_kg_gnn_skill_pack/src_layout/: tree.md
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/baselines/: bm25_matcher.py  node2vec_matcher.py  rule_matcher.py  sbert_matcher.py
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/data/: build_graph.py  negative_sampling.py  preprocess.py  schema.py  skill_normalizer.py  split.py  validate.py
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/evaluation/: ablation.py  evaluate.py  metrics.py
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/explanation/: __init__.py  explain.py  path_extractor.py  skill_gap.py
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/features/: path_features.py  rule_features.py  structured_encoder.py  text_encoder.py
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/inference/: index_builder.py  ranker.py  service.py
hr_kg_gnn_skill_pack/src_layout/src/jobmatch_gnn/models/: kgat.py  kgcn.py  lightgcn.py  losses.py  scorer.py  spc_hgt.py
hr_kg_gnn_skill_pack/src_layout/tests/: README.md
hr_kg_gnn_skill_pack/templates/: CHANGELOG.md  MODEL_CARD.md
hr_kg_gnn_skill_pack/templates/configs/: eval.yaml  infer.yaml  train.yaml
hr_kg_gnn_skill_pack/templates/configs/baseline/: bm25.yaml  rule.yaml  sbert.yaml
hr_kg_gnn_skill_pack/templates/configs/model/: spc_hgt.yaml
hr_kg_gnn_skill_pack/templates/experiments/: experiment_record_template.md
(+87 files in other folders)
