[project]
name = "personas-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.ruff]
line-length = 150
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv", "**/.*"]
typeCheckingMode = "standard"
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
