[project]
name = "jobmatch-gnn"
version = "0.1.0"
description = "Knowledge-graph-enhanced GNN module for person-job matching"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torch-geometric>=2.5",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "scikit-learn>=1.3",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=2.2",
  "faiss-cpu>=1.7",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "pre-commit"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
